[gd_scene load_steps=11 format=3 uid="uid://by6rny86nx30p"]

[ext_resource type="Script" uid="uid://deqqmiloe014t" path="res://map/end_window/end_window.gd" id="1_gmwiw"]
[ext_resource type="LabelSettings" uid="uid://cxqofppwjhrtu" path="res://assets/header_font_settings.tres" id="1_vctai"]
[ext_resource type="LabelSettings" uid="uid://u6018fifyd8o" path="res://assets/label.tres" id="2_gmwiw"]
[ext_resource type="FontFile" uid="uid://nieaekycl7wi" path="res://assets/fonts/SignikaNegative-VariableFont_wght.ttf" id="3_1ujin"]
[ext_resource type="StyleBox" uid="uid://sg6leeg6q7i" path="res://menu/button_style_pressed.tres" id="4_i0t5b"]
[ext_resource type="StyleBox" uid="uid://bm0ompjupe7go" path="res://menu/button_style_hover.tres" id="5_3ehik"]
[ext_resource type="StyleBox" uid="uid://cotr02bcpjcqi" path="res://menu/button_style.tres" id="6_g3xe5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gmwiw"]
bg_color = Color(2.10572e-08, 0.126187, 0.147083, 0.74902)

[sub_resource type="LabelSettings" id="LabelSettings_gmwiw"]
font = ExtResource("3_1ujin")
font_size = 24
font_color = Color(0.870588, 1, 0.521569, 1)
outline_size = 8
outline_color = Color(0, 0.0901961, 0.109804, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vctai"]
font = ExtResource("3_1ujin")
outline_size = 5
outline_color = Color(0, 0.0920374, 0.108835, 1)
shadow_size = 3
shadow_color = Color(0, 0.0901961, 0.109804, 1)

[node name="EndWindow" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gmwiw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gmwiw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 32

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -8

[node name="Title" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Ship Founderin'!"
label_settings = ExtResource("1_vctai")
horizontal_alignment = 1

[node name="GameOver" type="Label" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_gmwiw")
horizontal_alignment = 1
uppercase = true

[node name="Stats" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/Stats"]
layout_mode = 2
text = "Nautical Miles Traveled"
label_settings = SubResource("LabelSettings_vctai")

[node name="MilesTraveled" type="Label" parent="VBoxContainer/Stats"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "102"
label_settings = ExtResource("2_gmwiw")
horizontal_alignment = 2

[node name="Label2" type="Label" parent="VBoxContainer/Stats"]
layout_mode = 2
text = "Battles Won"
label_settings = SubResource("LabelSettings_vctai")

[node name="BattlesWon" type="Label" parent="VBoxContainer/Stats"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "26"
label_settings = ExtResource("2_gmwiw")
horizontal_alignment = 2

[node name="Label3" type="Label" parent="VBoxContainer/Stats"]
layout_mode = 2
text = "Jigs Performed"
label_settings = SubResource("LabelSettings_vctai")

[node name="JigsWon" type="Label" parent="VBoxContainer/Stats"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "34"
label_settings = ExtResource("2_gmwiw")
horizontal_alignment = 2

[node name="Label4" type="Label" parent="VBoxContainer/Stats"]
layout_mode = 2
text = "Treasures Found"
label_settings = SubResource("LabelSettings_vctai")

[node name="Treasures" type="Label" parent="VBoxContainer/Stats"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "5"
label_settings = ExtResource("2_gmwiw")
horizontal_alignment = 2

[node name="NewGame" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.219608, 0.25098, 1)
theme_override_colors/font_focus_color = Color(0, 0.219608, 0.25098, 1)
theme_override_fonts/font = ExtResource("3_1ujin")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover_pressed = ExtResource("4_i0t5b")
theme_override_styles/hover = ExtResource("5_3ehik")
theme_override_styles/pressed_mirrored = ExtResource("4_i0t5b")
theme_override_styles/pressed = ExtResource("4_i0t5b")
theme_override_styles/normal_mirrored = ExtResource("6_g3xe5")
theme_override_styles/normal = ExtResource("6_g3xe5")
text = "New Game"

[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
